@@ -69,7 +69,8 @@ Modalbox.Methods = {
 		//Adding event observers
 		this.hide = this.hide.bindAsEventListener(this);
 		this.close = this._hide.bindAsEventListener(this);
-		this.kbdHandler = this.kbdHandler.bindAsEventListener(this);
+		this._kbdHandler = this._kbdHandler.bindAsEventListener(this);
+		this._mouseHandler = this._mouseHandler.bindAsEventListener(this);
 		this._initObservers();
 
 		this.initialized = true; // Mark as initialized
@@ -305,13 +306,15 @@ Modalbox.Methods = {
 	_initObservers: function(){
 		Event.observe(this.MBclose, "click", this.close);
 		if(this.options.overlayClose) Event.observe(this.MBoverlay, "click", this.hide);
-		Event.observe(document, "keypress", Modalbox.kbdHandler );
+		Event.observe(document, "keypress", Modalbox._kbdHandler);
+		Event.observe(document, "click", Modalbox._mouseHandler);
 	},
 	
 	_removeObservers: function(){
 		Event.stopObserving(this.MBclose, "click", this.close);
 		if(this.options.overlayClose) Event.stopObserving(this.MBoverlay, "click", this.hide);
-		Event.stopObserving(document, "keypress", Modalbox.kbdHandler );
+		Event.stopObserving(document, "keypress", Modalbox._kbdHandler);
+		Event.stopObserving(document, "click", Modalbox._mouseHandler);
 	},
 	
 	_loadAfterResize: function() {
@@ -339,7 +342,7 @@ Modalbox.Methods = {
 		return this.MBcontent.getElementsByClassName('MB_focusable');
 	},
 	
-	kbdHandler: function(e) {
+	_kbdHandler: function(e) {
 		var node = Event.element(e);
 		switch(e.keyCode) {
 			case Event.KEY_TAB:
@@ -383,6 +386,18 @@ Modalbox.Methods = {
 				else if( (node.tagName.toLowerCase() == "input" && ["submit", "button"].include(node.type)) || (node.tagName.toLowerCase() == "a") )
 					Event.stop(e);
 				break;
+		}
+	},
+	
+	_mouseHandler: function(event){
+		/* Method for switching currFocused to the element which was focused by mouse instead of TAB-key. Fix for #134 */ 
+		if(this.initialized) { // Check for Modalbox DOM is already generated
+			var i = 0;
+			this.focusableElements.each(function(el){
+				if(Event.element(event) == el)
+					Modalbox.currFocused = i;
+				i++;
+			});
 		}
 	},
 	
