@@ -4,7 +4,8 @@ ver 1.5.7 (12/10/2007)
  Added: 	Added onException callback support for Ajax request
  Added: 	Experimental CSS3 drop shadow and rounded corners added
  Changed: 	Ajax.request callback change: onComplete -> onSuccess
- Fixed: 	overlayClose parameter for window sequences (wizards) is working again [#139]
+ Fixed: 	overlayClose parameter for window sequences (wizards) fixed [#139]
+ Fixed: 	Selecting a form element with mouse tab order fixed [#134]
  
 ver 1.5.6 (10/09/2007)
  Changed: 	No title case improved. Fixed extra header space addition, changed CSS
